--- a/index.html
+++ b/index.html
@@ -1,9 +1,75 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>nanuj blog</title>
-  </head>
-  <body>
-    这是博客内容！
-  </body>
+<head>
+	<meta charset="utf-8">
+	<title>路泽平个人网页</title>
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<script type="text/javascript" src="js/date.js">
+		
+	</script>
+</head>
+<body>
+	<header>
+		<span id="xiao">小路路的个人主页</span><br>
+		<span id="xiaol">xiaoLuLu'index</span>
+		<div id="date">
+			<script type="text/javascript">
+				dates();
+			</script>
+		</div>
+	</header>
+	<nav>
+		<a href="#">首页</a>
+		<a href="#">自我介绍</a>
+		<a href="#">我的学校</a>
+		<a href="#">图片新闻</a>
+		<a href="#">综合要闻</a>
+		<a href="#">我的作品</a>
+	</nav>
+	<section>
+		<div id="news">
+			<img src="images/news.png" width="460" heigth="390">
+			<h1 id="newsB">新闻</h1>
+			<span id="newsZ">全省高校思想政治工作会议在长沙召开。省委书记杜家毫强调，深入学习贯彻习近平总书记在全国高校思想政治工作会议上的重要讲话精神，切实加强党对高校的领导，把正确政治方向和价值导向贯穿立校办学、育人育才全过程，推动全省高校思想政治工作和高等教育改革发展迈上新台阶，加快建设科教强省。省委副书记乌兰主持会议。</span>
+		</div>
+		<div id="zhongs">
+			<div id="zhong">
+				<h1>综合要闻</h1>
+				<ul>
+					<li>
+						全省高职公共管理与服务类专业委员会在我校成立
+					</li>
+					<li>
+						校党委中心组专题学习全国高校思想政治工作会议
+					</li>
+					<li>
+						校党委书记蒋晓明在全省高校思想政治工作会议上
+					</li>
+					<li>
+						我校斩获2017年湖南省职业院校技能竞赛八项
+					</li>
+					<li>
+						李斌参加国家优质高职院校建设推进会
+					</li>
+					<li>
+						我校2002届毕业生冯丹荣获全国“五一劳动奖
+					</li>
+					<li>
+						2017年湖南省职业院校技能竞赛长沙民政职业蒋晓明给民政与社会工作学院第一期高培学员上党
+					</li>
+					<li>
+						蒋晓明给民政与社会工作学院第一期高培学员上党
+					</li>
+					<li>
+						长沙民政职院成功申办临床医学专业
+					</li>
+			</ul>
+			</div>
+		</div>
+		<div id="flash"></div>
+	</section>
+	<footer>
+		<p>&copy;2017&nbsp;&nbsp;长沙民政职业技术学院&nbsp;&nbsp;路泽平 <br>版权没有，盗版不究</p>
+	</footer>
+</body>
 </html>
